# estudante

./: .gitignore  README.md  estudante.py  licenca.txt  manifest.in  pyproject.toml  requirements.txt  setup.py
estudante.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
saida/: How_to_catch_waves_-_A_Comprehensive_Guide_for_Beginners_.docx  _Users_pedblan_Desktop_Artigo_Estadão_-_revisão_4.docx  _Users_pedblan_Desktop_discurso_artigo_estadao.docx  _Users_pedblan_Desktop_semestre_unb_pad_1_aula_1.docx  aula_1.docx
scripts/: install_dependencies.sh
src/: assist.py  gui.py  gui_main.py  gui_ocr.py  gui_resumo.py  gui_transcricao.py  interface.py  leiame.html  logica_ia.py  main.py  paths.py  proc.py  requisitos.py  subtarefas.py  subtarefas_gui.py  tarefas.py  tarefas_principais.py  utils.py  utils_gui.py  utils_ia.py
src/config/: config.py
src/edicao/: edicao.py
src/gui/: edicao.py  main.py  ocr.py  resumo.py  subtarefas_gui.py  transcricao.py
src/leiame/: leiame.html  leiame.py
src/leiturinha/: leiturinha.py  leiturinha_utils.py
src/ocr/: ocr.py
src/pdf/: pdf.py
src/resumo/: resumo.py
src/transcricao/: transcricao.py
src/utils/: __init__.py  load_env.py
