[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estudante"
version = "0.1.0"
description = "Um app para estudantes"
readme = "README.md"
readme-content-type = "text/markdown"
license = { text = "MIT" }
authors = [
    { name = "Pedro Duarte Blanco", email = "seu-email@exemplo.com" }
]
keywords = ["estudante", "ferramenta", "educação"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"

dependencies = [
    "Flask==2.0.1",
    "requests>=2.25.1"
]

[project.optional-dependencies]
dev = ["pytest>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
# Incluir arquivos de dados como ícones e HTML
"" = ["src/*.ico", "src/*.png", "src/*.html"]

[tool.setuptools.exclude-package-data]
# Excluir cache e arquivos compilado
